2009-09-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Speed up building.

	* debian/rules:
	  autoreconf only if ./configure doesn't exist, not every time
	  debian/rules runs.

2009-09-18  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Avoid leaking memory when
	reading window names. Avoid leaking memory in xas.c
	when we use goto to bail out.

	Release 0.2.69

2009-09-17  Gordon Williams <gordon.williams@collabora.co.uk>

	Changes for Screen rotate speed, related to latest h-d commits and
	bug NB#139504.
	
	* matchbox/core/mb-window-manager.h: Add 
	  MBWindowManagerFlagLayoutRotated
	* matchbox/core/mb-wm-layout.c: When MBWindowManagerFlagLayoutRotated
	  is set, lay things out as if the screen were rotated.

2009-09-16  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.68

	Remove _NET_WM_ICON support since we don't use it and it has buggy
	code. Fixes: NB#138792

	* matchbox/core/mb-wm-client-window.c (icon_from_net_wm_icon):
	Removed.
	(mb_wm_client_window_sync_properties): Don't read _NET_WM_ICON.
	* matchbox/core/mb-wm-root-window.c
	(mb_wm_root_window_update_supported_props): Remove _NET_WM_ICON from
	the list of supported properties.
	* matchbox/core/mb-wm-types.h: Remove _NET_WM_ICON.
	* matchbox/core/mb-wm-atoms.c (mb_wm_atoms_init): Remove _NET_WM_ICON.
	* matchbox/core/mb-window-manager.c (mb_wm_handle_property_notify):
	Remove _NET_WM_ICON specific code.

2009-09-11  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Stack dialogs correctly if transient_for is None. This is the MB2 part
	of the NB#131703 fix.

	* matchbox/client-types/mb-wm-client-dialog.c:

2009-09-11  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.67

	Apply a patch from Laszlo Pere for NB#118818 - Focus goes away from
	the text entry in the "new tag"/"new geotag" dialogs after
	backgrounding

	* matchbox/core/mb-wm-client.c